@@ -1,5 +1,7 @@
 Revision history for Web::Components::Role::TT
 
+          - Prefer vardir over root for templates
+
 0.6.1     2016-04-08 22:17:30
           - Will test for templates in prefered and config skin dirs
           - Restructured configuration attributes
